# desafio-gdash-2025-02

./: .cache.sqlite  .env  .env.example  .env.exemple  .exemple.env  .gitignore  .prettierignore  API-EXAMPLES.md  ARQUITETURA.md  COMMIT_GUIDE.md  DIAGRAMAS.md  FASE1_PLAN.md  FASE3_PLAN.md  FLUXOGRAMA_ARQUITETURA.md  LICENSE  Makefile  QUICK_START.MD  QUICK_START.md  README-run.md  README.md  README_IMPLEMENTACAO.md  RESUMO.md  REVISAO_PROJETO.md  RUNNING.md  TODO.md  VERIFICACAO.md  VIDEO_ROTEIRO.md  build.bat  check.sh  docker-compose.dev.yml  docker-compose.example.yml  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  docker.compose.yml  env.example  ex.json  gitignore.md  initial_project_files_gdash_challenge.md  (+27 more)
Desafio-Igor/: .env.example  .gitignore  ADVANCED_INSIGHTS.md  ARCHITECTURE.md  DEPLOYMENT.md  LICENSE  README.md  TESTING.md  docker-compose.yml  start.bat  start.ps1
api/: .dockerignore  .env.docker  .env.example  ARCHITECTURE.md  Dockerfile  INSIGHTS.md  README.md  (+4 more)
api-nest/: .env.example  Dockerfile  README.md  hash.ts  package-lock.json  package.json  tsconfig.json
api-nestjs/: package-lock.json  package.json
weather-collector/: .dockerignore  .env  Dockerfile  README.md  app.py  main.py  message_queue.py  pyproject.toml  requirements.txt  weather_api.py
weather-collector/src/: config.py  main.py  queue_sender.py  weather_api.py
weather-collector/src/config/: settings.py
weather-collector/src/services/: queue_service.py  weather_service.py
weather-collector/src/utils/: logger.py
(+2178 files in other folders)
