[project]
name = "weather-collector"
version = "1.0.0"
description = "Coletor de dados meteorológicos para Open-Meteo"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "pika>=1.3.2",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"